--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "Desafio da Cadastra para novos colaboradores",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel dev server",
+    "start": "cross-env SERVER_API=http://localhost:5000 npm-run-all --parallel dev server",
+    "start:gp": "npm-run-all --parallel dev server",
     "dev": "gulp",
     "server": "json-server ./db.json --port 5000"
   },
