--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-image-optimization": "^0.1.3",
+    "gulp-imagemin": "^9.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "npm-run-all": "^4.1.5",
